Thu May  3 11:26:02 2001                        Michael Jennings (mej)

Oops, got a little overzealous with the cleaning....
----------------------------------------------------------------------
Wed May  9 11:06:38 2001                        Michael Jennings (mej)

Post-2.0 updates and bugfixes.
----------------------------------------------------------------------
Wed May  9 13:48:03 2001                      Walt Drummond (drummond)
- Added avalon.1 man page; overview for tool set
- Added support for avdiff, avstatus, avlog
- Added _some_ of the query type codes to the revtool.1 manpage
  Partially closed bug #1144
- Changed the av* hardlinks to symlinks to aid readability
----------------------------------------------------------------------
Wed May  9 14:31:54 2001                        Michael Jennings (mej)

Oops.  Use the right makefile....
----------------------------------------------------------------------
Fri May 11 09:03:16 2001                      Walt Drummond (drummond)

o Changed .avalon.makefile to Makefile.avalon; hidden files in source
  trees are evil.
o Changed the logic in parse_product_entry() to assume modules if
  $proddir isn't defined.
o Have special_build() look for RPMs in a specific location rather
  than parsing output of make.  This is more deterministic.
o Added debugging prints for $prod, $basedir and $builddir
----------------------------------------------------------------------
Tue May 15 14:17:48 2001                        Michael Jennings (mej)

Minor update to web-sync.
----------------------------------------------------------------------
Tue May 29 12:23:32 2001                        Michael Jennings (mej)

Minor fixes.
----------------------------------------------------------------------
Fri Jun  8 14:05:57 2001                      Walt Drummond (drummond)
Added sample Makefile.avalon and update buildtool manpage to reference
it.

----------------------------------------------------------------------