@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgtool,v 1.37 2001/05/09 18:06:49 mej Exp $
+# $Id: pkgtool,v 1.38 2001/06/08 23:40:49 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -735,8 +735,13 @@ rpm_generate_source_files
 
     if ($srcs) {
         @srcs = split(/[\s,]/, $srcs);
+    } elsif (-s "avalon.srcs") {
+        @srcs = &parse_srcs_file("avalon.srcs");
     } else {
         my $fname;
+
+        wprint "No SRCS variable found.  Proceeding with default assumptions.  If the assumptions don't work,\n";
+        wprint "you will need to create an avalon.srcs file for this package.\n";
 
         foreach $fname (@contents) {
             next if (&should_ignore($fname));
@@ -965,7 +970,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.37 $ created on $Date: 2001/05/09 18:06:49 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.38 $ created on $Date: 2001/06/08 23:40:49 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
