@@ -1,0 +1,1 @@
+*tool&pkgsort&mod&README&ChangeLog&doc&*.spec:avalon.tar.gz
